# real-timne-analysis-of-therapy-audio-and-text

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  schemas.py  store.py
app/services/: __init__.py  crisis.py  fusion.py  gemini_client.py  hf_client.py  lexicon.py  local_vosk.py  openai_client.py  prosody.py
tests/: test_audio_api.py
